--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                 <p role="text">
                     Mais experientes, os heróis de Stranger Things agora precisam
                     enfrentar desafios maiores do que nunca e tomar decisões que,
-                    definitivamente, vão mudar suas vidas para sempre. Confira ao lado
-                    o trailer da quarta temporada.
+                    definitivamente, vão mudar suas vidas para sempre. 
+                    Confira o trailer da quarta temporada.
                 </p>
             </div>
         </section>
