--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Stranger Things</title>
-    <link rel="stylesheet" type=text/css href="./assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/principal-page.css" />
 </head>
 <body class="light-theme" aria-label="O site está utilizando o tema light" role="body">
     <header aria-label="Cabeçalho da página." >
@@ -116,7 +116,7 @@
                         <label for="txtCharacter">Personagem</label>
                         <textarea name="character" cols="30" rows="10" id="txtCharacter"></textarea>
 
-                        <button type=button id="btnSubscribe">Me inscrever</button>
+                        <button type="button" id="btnSubscribe">Me inscrever</button>
                     </form>
                     <!--<script type="module" src="assets/js/main.js></script>"-->
                 </div>
@@ -155,6 +155,7 @@
         audio.volume = 0.2;
         }
     </script>
+    <script type="module" src="assets/js/main.js"></script>
 </body>
 </html>
 
