--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         audio.volume = 0.2;
         }
     </script>
-    <script type="module" src="assets/js/main.js"></script>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 </html>
 
